Fix spacing

--- a/src/footer.css
+++ b/src/footer.css
@@ -10,3 +10,15 @@ section.footer {
   flex-flow: column nowrap;
   gap: 24px;
 }
+
+.flags {
+  align-items: center;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 8px;
+}
+
+.flag {
+  height: 32px;
+  width: 32px;
+}
