--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ html {
 .app-page {
   display: grid;
   grid-template-columns: minmax(var(--gutter), 1fr) minmax(0, var(--content-width)) minmax(var(--gutter), 1fr);
-  grid-row-gap: 48px;
+  grid-row-gap: 32px;
   width: 100vw;
   min-height: 100vh;
 }
@@ -213,6 +213,6 @@ p {
 .heading-and-content {
   display: flex;
   flex-flow: column nowrap;
-  gap: 48px;
+  gap: 24px;
   padding: 32px 0;
 }
